// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Radio ENCOURA theme matches the snapshot 1`] = `
<div>
  <span
    class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary Mui-checked MuiRadio-root MuiRadio-colorPrimary css-1yeubx2-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
  >
    <input
      checked=""
      class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
      type="radio"
    />
    <span
      class="css-9oxshb-MuiRadioButtonIcon-root"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1jm5zau-MuiSvgIcon-root-MuiRadioButtonIcon-root"
        data-testid="RadioButtonUncheckedIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-kp9nhp-MuiSvgIcon-root-MuiRadioButtonIcon-root"
        data-testid="RadioButtonCheckedIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`Radio ENCOURA_CLASSIC theme matches the snapshot 1`] = `
<div>
  <span
    class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary Mui-checked MuiRadio-root MuiRadio-colorPrimary css-1dhgspm-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
  >
    <input
      checked=""
      class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
      type="radio"
    />
    <span
      class="css-9oxshb-MuiRadioButtonIcon-root"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1jm5zau-MuiSvgIcon-root-MuiRadioButtonIcon-root"
        data-testid="RadioButtonUncheckedIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-kp9nhp-MuiSvgIcon-root-MuiRadioButtonIcon-root"
        data-testid="RadioButtonCheckedIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`Radio ENCOURAGE theme matches the snapshot 1`] = `
<div>
  <span
    class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary Mui-checked MuiRadio-root MuiRadio-colorPrimary css-1vaf2az-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
  >
    <input
      checked=""
      class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
      type="radio"
    />
    <span
      class="css-9oxshb-MuiRadioButtonIcon-root"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1jqde6x-MuiSvgIcon-root-MuiRadioButtonIcon-root"
        data-testid="RadioButtonUncheckedIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-f5udx7-MuiSvgIcon-root-MuiRadioButtonIcon-root"
        data-testid="RadioButtonCheckedIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`Radio ENCOURAGE_E4E theme matches the snapshot 1`] = `
<div>
  <span
    class="MuiButtonBase-root MuiRadio-root MuiRadio-colorPrimary PrivateSwitchBase-root MuiRadio-root MuiRadio-colorPrimary Mui-checked MuiRadio-root MuiRadio-colorPrimary css-hsdpkv-MuiButtonBase-root-MuiSwitchBase-root-MuiRadio-root"
  >
    <input
      checked=""
      class="PrivateSwitchBase-input css-12xagqm-MuiSwitchBase-root"
      type="radio"
    />
    <span
      class="css-9oxshb-MuiRadioButtonIcon-root"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-szccee-MuiSvgIcon-root-MuiRadioButtonIcon-root"
        data-testid="RadioButtonUncheckedIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1d7ki60-MuiSvgIcon-root-MuiRadioButtonIcon-root"
        data-testid="RadioButtonCheckedIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M8.465 8.465C9.37 7.56 10.62 7 12 7C14.76 7 17 9.24 17 12C17 13.38 16.44 14.63 15.535 15.535C14.63 16.44 13.38 17 12 17C9.24 17 7 14.76 7 12C7 10.62 7.56 9.37 8.465 8.465Z"
        />
      </svg>
    </span>
  </span>
</div>
`;
